network-policies/ingress-payroll-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: payroll-policy
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: internal
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      name: payroll
  policyTypes:
  - Ingress
